# arc-agi-3

./: .gitignore  LocalSimulator.py  core_knowledge_library.json  episodic_memory.json  fix_chronos.py  simulation_results.json  update_colab_runner.py  update_notebook.py
CommunitySolutions/Ash_solver/: Readme.md  ash-s-arc-agi-3-agent.ipynb  colab_runner.ipynb  my_agent.py  my_agent_from_kaggle.py  my_agent_v1.py  play_game.py  shreyas-m-arc-agi-3-agent-v1.ipynb  shreyas-m-arc-agi-agent-v2.ipynb
CommunitySolutions/chronos_solver/: Readme.md  colab_runner.ipynb  play_game.py  requirements_colab.txt  shreyas-m-arc-agi-agent-chronos.ipynb
CommunitySolutions/hybrid_solver/: Readme.md  arc-agi-3-hybrid-solver-bfs-cnn-heuristics.ipynb  my_agent.py  my_agent_from_kaggle.py
arc1_solution/: GCP_RUN_GUIDE.md
arc_solver/: README.md  phase_1a_tracer.py
arc_solver/arc_solver/: .env  (+7 more)
dreamerv3/: build_dreamer_notebook.py  ls20_dreamer_env.py  play_and_learn_kaggle.py  test_env_info.py  test_lives.py  test_win.py
multimodel_solver/: explorer.py  multimodal_prompter.py  multimodal_world_modeler.py  repl_synthesizer.py  sample_command.txt
old_solutions/: LocalSimulator.py  dummy_task.json  output.txt  test_framedata.py
old_solutions/arc_solver/: LocalSimulator.py  episodic_memory.json  phase_1a_tracer.py  pyproject.toml  test_explorer.py  test_perception.py
old_solutions/arc_solver/arc_solver/: evolutionary_synthesis.py  llm_client.py  planner.py  trm_reasoner.py
stochastic_goose/: arc3-sample-submission-stochastic-goose.ipynb  build_notebook.py  run_quickstart.py
(+82 files in other folders)
