[tool.poetry]
name = "arc-solver"
version = "0.1.0"
description = "ARC-AGI-3 solver"
authors = ["Shreyas Mahimkar"]
readme = "README.md"
packages = [{include = "arc_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
google-genai = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
